Fix potential NPE in ClassPathElement.getResources